<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Textalk</string>
    <string name="activity_name_handwriting">Textalk: Handwriting</string>
    <string name="button_speak">Speak</string>
    <string name="button_write">Write</string>
    <string name="button_handwrite">Handwrite</string>
    <string name="button_retry">Retry</string>
    <string name="button_clear">Clear</string>
    <string name="button_undo">Undo</string>
    <string name="button_send">Send</string>
    <string name="button_close">Close</string>
    <string name="button_connect">Connect</string>
    <string name="button_disconnect">Disconnect</string>
    <string name="button_getfile">Launch Gallery</string>
    <string name="please_speak">Please speak</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_pick_history">Pick from history</string>
    <string name="menu_clear_history">Clear history</string>
    <string name="menu_about">About %s</string>
    <string name="no_expressions">No saved history.</string>
    <string name="no_results">No results.</string>
    <string name="confirm_clear">Clear all history?</string>
    <string name="bitmap_sent">Bitmap was sent.</string>
    <string name="not_connected">Not connected with anyone</string>
    <string name="write_message">Write message:</string>
    <string name="label_me">ME</string>
    <string name="label_peers">PEERS</string>
    <string name="group_owner_text">Am I the Group Owner?</string>
    <string name="client_text">This device will act as a client. Click on Gallery button to pick a local(stored) file</string>
    <string name="empty_message">No devices found. Turn on P2P and perform discovery from the Action Bar</string>
    <string name="connected">Connected with %1$s</string>
    <string name="disconnected">Disconnected with %1$s</string>
    <string name="renamed">%1$s renamed to %2$s</string>
    
    <string name="pref_settings_title">Settings</string>
    <string name="pref_expressions_settings_title">History</string>
    <string name="pref_expressions_max_dialogtitle">Max of history</string>
    <string name="pref_expressions_max_title">Maximum</string>
    <string name="pref_expressions_max_summary">Maximum of history to be shown</string>
    <string name="pref_expressions_clear_title">Clear history</string>
    <string name="pref_expressions_clear_summary">Clear all history</string>
    <string name="pref_recognition_settings_title">Speech recognition</string>
    <string name="pref_recognition_language_dialogtitle">Language in speech recognition</string>
    <string name="pref_recognition_language_title">Language</string>
    <string name="pref_recognition_language_summary">In which language to perform speech recognition</string>

    <string name="pref_network_settings_title">Network</string>
    <string name="pref_connection_mode_title">Connection Mode</string>
    <string name="pref_connection_mode_summary">UDP/WiFi P2P/Tethering</string>
    <string name="pref_myname_title">My name</string>
    <string name="pref_myname_summary">Name shown with chat message</string>
    
</resources>