<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:id="@+id/speakButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onClickSpeakButton"
            android:text="@string/button_speak" />

        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:id="@+id/writeButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onClickWriteButton"
            android:text="@string/button_write" />

        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:id="@+id/handwriteButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onClickHandwriteButton"
            android:text="@string/button_handwrite" />
      </LinearLayout>

    <ListView
        android:id="@+id/textList"
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="1" />

</LinearLayout>