<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
>
    <net.kazhik.android.textalk.HandwritingView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/handwritingView"
    />

    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/undoBtn"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onClick"
            android:background="@color/button_background_color"
            android:text="@string/button_undo" />

        <Button
            android:id="@+id/clearBtn"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onClick"
            android:background="@color/button_background_color"
            android:text="@string/button_clear" />

        <Button
            android:id="@+id/sendBtn"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onClick"
            android:background="@color/button_background_color"
            android:text="@string/button_send" />

        </LinearLayout>
</RelativeLayout>